tests/rosetta/out/Kotlin/almost-prime.error
kotlinc: exit status 1
OpenJDK 64-Bit Server VM warning: Options -Xverify:none and -noverify were deprecated in JDK 13 and will likely be removed in a future release.
/tmp/almost-prime.kt:24:13: error: val cannot be reassigned
            n = (n).toDouble() / (i).toDouble()
            ^
/tmp/almost-prime.kt:24:17: error: type mismatch: inferred type is Double but Int was expected
            n = (n).toDouble() / (i).toDouble()
                ^
